--- a/classificacao.html
+++ b/classificacao.html
@@ -21,7 +21,7 @@
                 <a class="nav-link disable" aria-current="page" href="#">Classificação</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="partida.html">Anotar Partida</a>
+                <a class="nav-link active" href="index.html">Anotar Partida</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="cadastro.html">Cadastrar Jogador</a>
